@@ -132,6 +132,8 @@ for lha5name in args:
         ## Write Q2 points
         line = " ".join("%2.6e" % q2 for q2 in q2s)
         f.write(line + "\n")
+        ## Write internal flavour list
+        f.write("-5 -4 -3 -2 -1 1 2 3 4 5 21" + "\n")
         ## Write block of xf values
         for xfs_xq in xfs:
             line = ""
